<resources>
    <string name="app_name">RegistroPersonas</string>
    <string name="hinteditTextVacio"></string>string>
    <string name="hinteditTextIngreseIdentificacion">Ingrese identificacion</string>string>
    <string name="editTextUsuario"></string>string>
    <string name="editTextPassword"></string>string>
    <string name="botonLogin">INICIAR SESIÓN</string>string>
    <string name="botonCrearRegistro">CREAR REGISTRO</string>string>
    <string name="botonConsultarRegistro">CONSULTAR REGISTRO</string>string>
    <string name="botonRestablecerContraseña">¿HAS OLVIDADO LA CONTRASEÑA?</string>string>
    <string name="botonCrearCuentaNueva">CREAR CUENTA NUEVA</string>string>
    <string name="textViewUsuario">Ingrese su usuario</string>string>
    <string name="textViewPassword">Password</string>string>
    <string name="textViewRegistrar">Registrar</string>string>
    <string name="textViewConsultar">Consultar registro</string>string>
    <string name="textViewEliminar">Eliminar registro</string>string>
    <string name="textViewActualizar">Actualizar registro</string>string>
    <string name="imageButtonRegistrar">Registrar</string>string>
    <string name="imageButtonActualizar">Actualizar</string>string>
    <string name="imageButtonConsultar">Consultar</string>string>
    <string name="imageButtonEliminar">Eliminar</string>string>
    <string name="textViewIdentificacion">Número de identificación</string>string>
    <string name="textViewNombres">Nombres</string>string>
    <string name="textViewApellidos">Apellidos</string>string>
    <string name="textViewTelefono">Teléfono</string>string>
    <string name="textViewTemperatura">Temperatura en °C</string>string>
    <string name="textViewRol">Rol</string>string>
    <string name="editTextRegistroIdentificacion"></string>string>
    <string name="editTextRegistroNombres"></string>string>
    <string name="editTextRegistroApellidos"></string>string>
    <string name="editTextRegistroTelefono"></string>
    <string name="editTextRegistroTemperatura"></string>
    <string name="editTextConsultaIdentificacion"></string>string>
    <string name="editTextConsultaNombres"></string>string>
    <string name="editTextConsultaApellidos"></string>string>
    <string name="editTextConsultaTelefono"></string>
    <string name="editTextConsultaTemperatura"></string>
    <string name="editTextActualizaIdentificacion"></string>string>
    <string name="editTextActualizaNombres"></string>string>
    <string name="editTextActualizaApellidos"></string>string>
    <string name="editTextActualizaTelefono"></string>
    <string name="editTextActualizaTemperatura"></string>
    <string name="editTextEliminaIdentificacion"></string>
    <string name="botonEliminar">Eliminar</string>string>
    <string name="botonRegistrar">Registrar</string>
    <string name="botonActualizar">Actualizar</string>
    <string name="botonConsultar">Consultar</string>
    <![CDATA[string>]]>
</resources>